--- a/tmux.conf
+++ b/tmux.conf
@@ -26,7 +26,7 @@ set -g status-fg white
 set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=blue]\
+set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=magenta]\
 #(hostname -s)#[fg=white]::##[fg=yellow]#(curl ipecho.net/plain;echo)"
 
 set -g status-justify left
