--- a/tmux.conf
+++ b/tmux.conf
@@ -20,6 +20,11 @@ bind r respawn-window
 set -g set-titles on
 set -g set-titles-string '#(whoami)::#h'
 
+# active window title colors
+set-window-option -g window-status-current-fg colour166 #orange
+set-window-option -g window-status-current-bg default
+set-window-option -g window-status-current-attr bright
+
 set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
