--- a/tmux.conf
+++ b/tmux.conf
@@ -25,14 +25,14 @@ set-window-option -g window-status-current-fg colour166 #orange
 set-window-option -g window-status-current-bg default
 set-window-option -g window-status-current-attr bright
 
-set -g status-utf8 on
+#set -g status-utf8 on
 set -g status-bg black
 set -g status-fg white
-set -g status-interval 5
+set -g status-interval 0
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=magenta]\
+#set -g status-left "#[fg=Green]#(whoami)#[fg=white]::#[fg=magenta]\
 #(hostname -s)#[fg=white]::##[fg=yellow]#(curl ipecho.net/plain;echo)"
 
 set -g status-justify left
-set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
+#set -g status-right '#[fg=Cyan]#S #[fg=white]%a %d %b %R'
